Added TOI and Exp Dungeon Quest features, Resolved UI bugs regarding closing and button states, repaired Weekly and Scroll Quest functionality to account for Main Quest Completion UI variances.

--- a/WpfApp2/MainWindow.xaml
+++ b/WpfApp2/MainWindow.xaml
@@ -37,7 +37,8 @@
                         <Button Name="btnWeekly" Click="BtnWeekly_Click" IsEnabled="False">Weekly Quest</Button>
                         <Button Name="btnScroll" IsEnabled="False" Click="btnScroll_Click">Scroll Quest</Button>
                         <Button Name="btnDaily" IsEnabled="False" Click="btnDaily_Click">Daily Dungeon</Button>
-                        <Button Name="btnTower" IsEnabled="False">Tower of Insolence</Button>
+                        <Button Name="btnTower" IsEnabled="False" Click="btnTOI_Click">Tower of Insolence</Button>
+                        <Button Name="btnExp" IsEnabled="False" Click="btnExp_Click">Exp Dungeon</Button>
                         <Button Name="btnProcessGrab" Click="BtnProcessGrab_Click">Find Nox</Button>
                         <ListBox Name="listProcessList" SelectedIndex="0" IsEnabled="False" >No Process Bound</ListBox>
                     </StackPanel>
