Added a feature to help manage Team Viewer pop ups to keep them out of the way of the bot screen.  Fixed a bug I introduced during refactoring regarding the home position, cycling, respawn, deathcount combo boxes.

--- a/WpfApp2/MainWindow.xaml
+++ b/WpfApp2/MainWindow.xaml
@@ -74,6 +74,9 @@
                         <StackPanel Orientation="Horizontal">
                             <CheckBox Content="Home Windows(0,0)" Name="HomeWindows" IsThreeState="False" IsChecked="True"/>
                         </StackPanel>
+                        <StackPanel Orientation="Horizontal">
+                            <CheckBox Content="TeamViewer Auto Ok" Name="TVOk" IsThreeState="False" IsChecked="True"/>
+                        </StackPanel>
                         <Label Content="Scroll Quest" FontSize="16"/>
                         <Label Content="Scroll Grade" Name ="ScrollGradeLabel" />
                         <StackPanel Orientation="Horizontal">
