--- a/WpfApp2/MainWindow.xaml
+++ b/WpfApp2/MainWindow.xaml
@@ -56,6 +56,7 @@
                                 <ComboBox Name="CbEmulators" SelectedItem="CbItemNox">
                                     <ComboBoxItem Name="CbItemNox" Content="NoxPlayer" IsSelected="True" Selected="Update_BtnProcessGrab"/>
                                     <ComboBoxItem Name="CbItemBS" Content="BlueStacks" Selected="Update_BtnProcessGrab" />
+                                    <ComboBoxItem Name="CbItemMEmu" Content="MEmu" Selected="Update_BtnProcessGrab" />
                                 </ComboBox>
                             </StackPanel>
                         </StackPanel>
