Added support for Android ADB.
Added:
L2RDevices(container for the ADB bot devices)
XML(for grabbing data from XML files)
Combox for ADB

Refactored:
Screen
Bot
Quest
Pixel
Quest
All children of Quest

--- a/WpfApp2/MainWindow.xaml
+++ b/WpfApp2/MainWindow.xaml
@@ -57,6 +57,7 @@
                                     <ComboBoxItem Name="CbItemNox" Content="NoxPlayer" IsSelected="True" Selected="Update_BtnProcessGrab"/>
                                     <ComboBoxItem Name="CbItemBS" Content="BlueStacks" Selected="Update_BtnProcessGrab" />
                                     <ComboBoxItem Name="CbItemMEmu" Content="MEmu" Selected="Update_BtnProcessGrab" />
+                                    <ComboBoxItem Name="CbItemADB" Content="ADB" Selected="Update_BtnProcessGrab" />
                                 </ComboBox>
                             </StackPanel>
                         </StackPanel>
